@@ -41,6 +41,9 @@ dojo.declare(
 
 	widgetsInTemplate: true,
 
+	attributeMap: dojo.mixin(dojo.clone(dijit._Widget.prototype.attributeMap),
+		{id:"", name:"valueNode"}),
+
 	baseClass: "dijitSlider",
 
 	_mousePixelCoord: "pageX",
