@@ -1,6 +1,6 @@
 <span class="${baseClass}" baseClass="${baseClass}"
 	><input
-	 	id="${id}" tabIndex="${tabIndex}" type="${_type}" name="${name}" value="${value}"
+	 	type="${_type}"
 		class="dijitCheckBoxInput"
 		dojoAttachPoint="inputNode,focusNode"
 	 	dojoAttachEvent="onmouseover:_onMouse,onmouseout:_onMouse,onclick:onClick"
