@@ -1,7 +1,7 @@
 <div class="dijit dijitLeft dijitInline dijitDropDownButton" baseClass="dijitDropDownButton"
 	dojoAttachEvent="onmouseover:_onMouse,onmouseout:_onMouse,onmousedown:_onMouse,onclick:_onArrowClick,onkeypress:_onKey"
 	><div class='dijitRight'>
-	<button tabIndex="${tabIndex}" class="dijitStretch dijitButtonNode dijitButtonContents" type="${type}" id="${id}" name="${name}"
+	<button class="dijitStretch dijitButtonNode dijitButtonContents" type="${type}"
 		dojoAttachPoint="focusNode,titleNode" waiRole="button" waiState="haspopup-true,labelledby-${id}_label"
 		><div class="dijitInline ${iconClass}"></div
 		><span class="dijitButtonText" 	dojoAttachPoint="containerNode,popupStateNode"
