@@ -1,4 +1,4 @@
-<table class="dijit dijitReset dijitSlider" cellspacing="0" cellpadding="0" border="0" rules="none" id="${id}"
+<table class="dijit dijitReset dijitSlider" cellspacing="0" cellpadding="0" border="0" rules="none"
 	><tr class="dijitReset"
 		><td class="dijitReset" colspan="2"></td
 		><td dojoAttachPoint="containerNode,topDecoration" class="dijitReset" style="text-align:center;width:100%;"></td
@@ -12,10 +12,10 @@
 			><div class="dijitSliderBar dijitSliderBumper dijitHorizontalSliderBumper dijitSliderLeftBumper dijitHorizontalSliderLeftBumper"></div
 		></td
 		><td class="dijitReset"
-			><input dojoAttachPoint="valueNode" name="${name}" type="hidden"
+			><input dojoAttachPoint="valueNode" type="hidden"
 			/><div style="position:relative;" dojoAttachPoint="sliderBarContainer"
 				><div dojoAttachPoint="progressBar" class="dijitSliderBar dijitHorizontalSliderBar dijitSliderProgressBar dijitHorizontalSliderProgressBar" dojoAttachEvent="onclick:_onBarClick"
-					><div tabIndex="${tabIndex}" dojoAttachPoint="sliderHandle,focusNode" class="dijitSliderMoveable dijitHorizontalSliderMoveable" dojoAttachEvent="onkeypress:_onKeyPress,onclick:_onHandleClick" waiRole="slider" valuemin="${minimum}" valuemax="${maximum}"
+					><div dojoAttachPoint="sliderHandle,focusNode" class="dijitSliderMoveable dijitHorizontalSliderMoveable" dojoAttachEvent="onkeypress:_onKeyPress,onclick:_onHandleClick" waiRole="slider" valuemin="${minimum}" valuemax="${maximum}"
 						><div class="dijitSliderImageHandle dijitHorizontalSliderImageHandle"></div
 					></div
 				></div
