@@ -1,9 +1,9 @@
-<table class="dijitReset dijitSlider" cellspacing="0" cellpadding="0" border="0" rules="none" id="${id}"
+<table class="dijitReset dijitSlider" cellspacing="0" cellpadding="0" border="0" rules="none"
 ><tbody class="dijitReset"
 	><tr class="dijitReset"
 		><td class="dijitReset"></td
 		><td class="dijitReset dijitSliderButtonContainer dijitVerticalSliderButtonContainer"
-			><div class="dijitVerticalSliderIncrementIcon" tabIndex=-1 style="display:none" dojoAttachPoint="incrementButton" dojoAttachEvent="onclick: increment"><span class="dijitSliderButtonInner">+</a></span></div
+			><div class="dijitVerticalSliderIncrementIcon" tabIndex="-1" style="display:none" dojoAttachPoint="incrementButton" dojoAttachEvent="onclick: increment"><span class="dijitSliderButtonInner">+</a></span></div
 		></td
 		><td class="dijitReset"></td
 	></tr
@@ -17,11 +17,11 @@
 	><tr class="dijitReset"
 		><td dojoAttachPoint="leftDecoration" class="dijitReset" style="text-align:center;height:100%;"></td
 		><td class="dijitReset" style="height:100%;"
-			><input dojoAttachPoint="valueNode" type="hidden" name="${name}"
+			><input dojoAttachPoint="valueNode" type="hidden"
 			/><center style="position:relative;height:100%;" dojoAttachPoint="sliderBarContainer"
 				><div dojoAttachPoint="remainingBar" class="dijitSliderBar dijitVerticalSliderBar dijitSliderRemainingBar dijitVerticalSliderRemainingBar" dojoAttachEvent="onclick:_onBarClick"></div
 				><div dojoAttachPoint="progressBar" class="dijitSliderBar dijitVerticalSliderBar dijitSliderProgressBar dijitVerticalSliderProgressBar" dojoAttachEvent="onclick:_onBarClick"
-					><div tabIndex="${tabIndex}" dojoAttachPoint="sliderHandle,focusNode" class="dijitSliderMoveable" dojoAttachEvent="onkeypress:_onKeyPress,onclick:_onHandleClick" style="vertical-align:top;" waiRole="slider" valuemin="${minimum}" valuemax="${maximum}"
+					><div dojoAttachPoint="sliderHandle,focusNode" class="dijitSliderMoveable" dojoAttachEvent="onkeypress:_onKeyPress,onclick:_onHandleClick" style="vertical-align:top;" waiRole="slider" valuemin="${minimum}" valuemax="${maximum}"
 						><div class="dijitSliderImageHandle dijitVerticalSliderImageHandle"></div
 					></div
 				></div
