@@ -1,6 +1,6 @@
-<div id="${id}" class="dijitTooltipDialog" >
+<div class="dijitTooltipDialog" >
 	<div class="dijitTooltipContainer">
-		<div  class ="dijitTooltipContents dijitTooltipFocusNode" dojoAttachPoint="containerNode" tabindex="0" waiRole="dialog"></div>
+		<div class ="dijitTooltipContents dijitTooltipFocusNode" dojoAttachPoint="containerNode" tabindex="0" waiRole="dialog"></div>
 	</div>
 	<span dojoAttachPoint="tabEnd" tabindex="0" dojoAttachEvent="focus:_cycleFocus"></span>
 	<div class="dijitTooltipConnector" ></div>
